Swapped images for welfare assessment

--- a/src/partials/section-about5.html
+++ b/src/partials/section-about5.html
@@ -39,85 +39,64 @@
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
-                    <img src="images/screens/get-started1.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
+                    <img src="images/screens/welfare1.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
                     <p class="slide-label">Site Information Page</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
-                    <img src="images/screens/get-started2.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
+                    <img src="images/screens/welfare2.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
                     <p class="slide-label">View Talk times & Upsells</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
-                    <img src="images/screens/explore.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
+                    <img src="images/screens/welfare3.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
                     <p class="slide-label">Exhibit Overview</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
-                    <img src="images/screens/explore2.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
+                    <img src="images/screens/welfare4.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
                     <p class="slide-label">Species Factfile</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
-                    <img src="images/screens/explore3.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
+                    <img src="images/screens/welfare5.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
                     <p class="slide-label">Species Factfile</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
-                    <img src="images/screens/explore4.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
+                    <img src="images/screens/welfare6.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
                     <p class="slide-label">Species Factfile</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
-                    <img src="images/screens/explore5.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
+                    <img src="images/screens/welfare7.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
                     <p class="slide-label">Species Upvote Button</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
-                    <img src="images/screens/explore6.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
+                    <img src="images/screens/welfare8.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
                     <p class="slide-label">Exhibit Overview</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
-                    <img src="images/screens/explore7.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
+                    <img src="images/screens/welfare9.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
                     <p class="slide-label">Animal Profile</p>
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
-                    <img src="images/screens/quiz-1.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
-                    <p class="slide-label">Built-in Quizzes</p>
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
-                    <img src="images/screens/quiz-2.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
-                    <p class="slide-label">Built-in Quizzes</p>
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
-                    <img src="images/screens/quiz-3.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
-                    <p class="slide-label">Built-in Quizzes</p>
                   </div>
                 </div>
                 
