--- a/src/partials/section-about5.html
+++ b/src/partials/section-about5.html
@@ -40,63 +40,63 @@
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
                     <img src="images/screens/welfare1.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
-                    <p class="slide-label">Site Information Page</p>
+                    <p class="slide-label">Assessment Instructions</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
                     <img src="images/screens/welfare2.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
-                    <p class="slide-label">View Talk times & Upsells</p>
+                    <p class="slide-label">Add Auditor Details</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
                     <img src="images/screens/welfare3.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
-                    <p class="slide-label">Exhibit Overview</p>
+                    <p class="slide-label">Select an Animal</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
                     <img src="images/screens/welfare4.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
-                    <p class="slide-label">Species Factfile</p>
+                    <p class="slide-label">Start the Assessment</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
                     <img src="images/screens/welfare5.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
-                    <p class="slide-label">Species Factfile</p>
+                    <p class="slide-label">Answer Questions</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
                     <img src="images/screens/welfare6.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
-                    <p class="slide-label">Species Factfile</p>
+                    <p class="slide-label">Capture Evidence</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
                     <img src="images/screens/welfare7.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
-                    <p class="slide-label">Species Upvote Button</p>
+                    <p class="slide-label">Download Results</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
                     <img src="images/screens/welfare8.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
-                    <p class="slide-label">Exhibit Overview</p>
+                    <p class="slide-label">View the Report</p>
                   </div>
                 </div>
 
                 <div class="swiper-slide">
                   <div class="mx-auto w-full max-w-[252px] xs:max-w-[265px]">
                     <img src="images/screens/welfare9.png" alt="screenshot" class="mx-auto w-full rounded-2xl"/>
-                    <p class="slide-label">Animal Profile</p>
+                    <p class="slide-label">Write in Completed Actions</p>
                   </div>
                 </div>
                 
